build(deps): update hello-world.mdx, package-lock.json and resume.tsx

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,11 +1,29 @@
 ---
-title: "Hello World"
-publishedAt: "2024-06-18"
-summary: "My first post on my new blog."
+title: "Astro: A New Approach to Building Websites"
+publishedAt: "2024-12-17"
+summary: "Discover Astro, a modern framework for building fast and optimized web applications."
 ---
 
 Hi there!
 
+Astro is an innovative web framework designed to build fast, content-driven websites. It focuses on delivering only the essentials to the browser by default, ensuring lightning-fast performance. Unlike traditional frameworks that bundle everything into a single JavaScript file, Astro embraces a "zero-JS by default" philosophy, shipping minimal JavaScript to the client.
+
+### Key Features
+- **Component-based Architecture**: Build with frameworks you love, like React, Vue, or Svelte, seamlessly integrated.
+- **Partial Hydration**: Load JavaScript only for interactive parts of your site, keeping the rest static.
+- **Server-first Approach**: Write components that run entirely on the server, resulting in reduced client-side load.
+- **Integrated Markdown & MDX**: Perfect for blogs or content-heavy sites with native support for Markdown and MDX.
+
+Here's a quick example to get started:
+
 ```jsx
-console.log("Hello World");
-```
+import Layout from '../components/Layout.astro';
+
+export default function BlogPost() {
+  return (
+    <Layout>
+      <h1>Welcome to Astro!</h1>
+      <p>Build faster, lighter, and more optimized websites today.</p>
+    </Layout>
+  );
+}
